// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/plugins /values-composed.js should ignore other @value types 1`] = `"@value * as a from \\"./local.css\\"; @value b: red;"`;

exports[`/plugins /values-composed.js should support importing a value from another file 1`] = `
Array [
  Object {
    "plugin": "modular-css-values-composed",
    "type": "modular-css",
    "values": Object {
      "a": Object {
        "source": Object {},
        "value": "red",
      },
    },
  },
]
`;

exports[`/plugins /values-composed.js should support importing multiple values from another file 1`] = `
Array [
  Object {
    "plugin": "modular-css-values-composed",
    "type": "modular-css",
    "values": Object {
      "a": Object {
        "source": Object {},
        "value": "red",
      },
      "b": Object {
        "source": Object {},
        "value": "blue",
      },
    },
  },
]
`;
